# PyCersi

./: .gitignore  .pypirc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Code_Of_Conduct.md  INSTALL.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
.github/workflows/: FUNDING.yml  publish.yml
Modules/: __init__.py  pycersi.py  setup.py
PyCersi/: LICENSE.txt  README.md  setup.cfg
PyCersi/Modules/: __init__.py  pycersi.py  setup.py
Sub Py Library/: README.md  setup.py  test.py
Sub Py Library/Sub Py Library/: SubPyNum.py  __init__.py  setup.py
pycersi/: __init__.py  bot.py  privator.py  pycersi.py
