# setup.cfg
[metadata]
name = pycersi
version = 7.0.0
description = PyCersi is a lightweight Python library for number-related utilities. It offers mathematical functions, checkers, and stack operations, simplifying common tasks. Easy to install via pip , it's designed for efficient integration into various Python projects.
description_file = README.md
author = Subhra Chakraborti
author_email = mail@subhrachakraborti.com, subhra@linuxmail.org
url = https://github.com/subhrachakraborti/PyCersi
license = MIT
